change workspace prefix

--- a/apps/fbn/src/index.html
+++ b/apps/fbn/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>img-recognition</title>
+    <title>fbn</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <img-recognition-root></img-recognition-root>
+    <fbn-root></fbn-root>
   </body>
 </html>
